// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toRDF Break on identifiers 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b1 dot:contains [
		<foaf:knows> _:b3 ;
		dot:related [
			schema:name \\"Alison\\" ;
			rdf:type dot:Wikilink ;
		] ;
	], [
		<foaf:knows> _:b6 ;
		dot:related [
			schema:name \\"Alice\\" ;
			rdf:type dot:Wikilink ;
		] ;
	] .

"
`;

exports[`toRDF Break on tags 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b8 dot:contains [
		dot:tag \\"person\\" ;
		<http://www.vault/name> \\"Alice\\" ;
	], [
		dot:tag \\"person\\" ;
		<http://www.vault/age> \\"42\\" ;
	] .

"
`;

exports[`toRDF Headings 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b15 dot:contains _:b16, [
		dot:tag \\"tag\\" ;
	] .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b23 <http://www.vault/inline> \\"field\\" ;
	<http://www.vault/**Thoughts**> \\"It was decent.\\" ;
	<http://www.vault/**Rating**> \\"6'\\" ;
	<http://www.vault/subject> [
		<http://www.vault/inline> \\"field\\" ;
	], [
		<http://www.vault/inline> \\"field\\" ;
	], [
		<http://www.vault/**Thoughts**> \\"It was decent.\\" ;
	], [
		<http://www.vault/**Rating**> \\"6\\" ;
	] ;
	<http://www.vault/Too> [
		<http://www.vault/many> [
			<http://www.vault/inline> \\"fields\\" ;
		] ;
	] ;
	<foaf:knows> _:b30 ;
	dot:related [
		schema:name \\"Alison\\" ;
		rdf:type dot:Wikilink ;
	], [
		schema:name \\"Alice\\" ;
		rdf:type dot:Wikilink ;
	], [
		schema:name \\"Bob\\" ;
		rdf:type dot:Wikilink ;
	] ;
	dot:undefined [
		<foaf:knows> _:b34 ;
	] .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b11 dot:related <http://www.vault/../houses/img.png>, [
		schema:name \\"link 1\\" ;
		rdf:type dot:Wikilink ;
	], <http://www.vault/link%201>, <http://www.vault/link%201.md>, <http://example.com>, [
		schema:name \\"link 1 \\" ;
		rdf:type dot:Wikilink ;
	], <http://www.vault/protocol>, <https://example2.com> .

<http://example.com> schema:name \\"Alias 2\\", \\"here\\" .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b18 <http://www.vault/number> \\"42\\" ;
	<http://www.vault/age> \\"42\\", \\"56\\" .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b19 <http://www.vault/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://www.vault/one> [
		<http://www.vault/0> \\"Two\\" ;
		<http://www.vault/1> [
			<http://www.vault/Three> [
				<http://www.vault/0> \\"Other\\" ;
			] ;
		] ;
	] ;
	dot:tag \\"cats\\", \\"dogs\\" .

"
`;
